Bug 1652220 [Linux] Clean up titlebar setup, r=jhorak

- Ask for alpha visual for toplevel windows on composited screens only.
- Rename TitlebarCanUseShapeMask() to TitlebarUseShapeMask() to control titlebar shape mask usage.
- Allow to use shape mask under widget.titlebar-x11-use-shape-mask preference, it's off by default.
- Simplify HideTitlebarByDefault(), remove compositing/shape mask check as we use RGBA visual only now.

Differential Revision: https://phabricator.services.mozilla.com/D98598